feature/transaction category (#40)
* drop categories table

* implement transaction option repository layer

* implement transaction option usecase

* impelment transaction option mock

* implement get transaction option handler

* update swagger
